# sealed-generic

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: check-and-lint.yaml  release.yaml  test.yaml
src/: lib.rs
tests/: basic.rs  fail.rs  lifetime.rs  nested.rs  option.rs  test_compile.rs
tests/fail/: seal.rs  seal.stderr  slice.rs  slice.stderr
