[package]
name = "sealed-generic"
description = "Sealed generic type discriminants"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Joshua Auchincloss <joshua.auchincloss@proton.me>"]
repository = "https://github.com/joshua-auchincloss/sealed-generic.git"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8"
darling = "0.21"
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
trybuild = "*"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
